2008-03-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* configure.ac: Require gettext 0.17
	* auth/ldap.c, auth/radius.c, libargp/tls.c, mailbox/cfg_lexer.c,
	pop3d/logindelay.c: Fix diagnostic messages.
	
2008-03-03  Sergey Poznyakoff  <gray@gnu.org.ua>

	* maidag/maidag.c (main): Fix autodetection of log_to_stderr.
	* maidag/deliver.c, maidag/maidag.h, maidag/mailtmp.c: Rename
	mailer_err to maidag_error.
	* maidag/util.c (mailer_err): Rename to maidag_error. Print to
	stderr only if log_to_stderr is set.

	Fix bootstrapping with gettext 0.17.
	
	* bootstrap.conf (avoided_gnulib_modules): Remove size_max
	(excluded_files): Remove m4/size_max.m4.
	(gnulib_extra_files): Add m4/inttostr.m4
	* gnulib.modules: Add intprops and stdint.

	* m4/intmax.m4, m4/intmax_t.m4, m4/inttostr.m4, m4/inttypes-h.m4,
	m4/inttypes-pri.m4, m4/inttypes.m4, m4/inttypes_h.m4: Remove

2008-03-02  Sergey Poznyakoff  <gray@gnu.org.ua>

	* bootstrap.conf (XGETTEXT_OPTIONS): Update flags.
	* configure.ac, NEWS: Version 1.9.90
	* m4/.cvsignore: Add environ.m4

	* po/ca.po, po/es.po, po/fr.po, po/pl.po, po/ro.po, po/ru.po,
	po/rw.po, po/sv.po, po/uk.po, po/LINGUAS, po/ChangeLog: Remove.
	We will get po files directly from translationproject.org.

2008-03-01  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mh/folder.c, mh/mh_argp.c, mh/mh_getopt.c, mh/mh_init.c,
	mh/rmf.c: Use mu_program_name instead of
	program_invocation_short_name. 

2008-02-29  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mh/mh_ctx.c (mh_context_read): Allow for header continuation
	lines.
	* mh/mh_whom.c (mh_whom): Improve diagnostics.

2008-02-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/Makefile.am (AM_LDFLAGS): Remove.
	(LDADD): Add the necessary libraries.
	(aclck_LDADD, argcv_LDADD): Remove.
	(muemail_LDADD): Needs MU_APP_LIBRARIES.

2008-02-26  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libcfg/init.c: Fix error reporting.
	* mailbox/cfg_driver.c (mu_parse_config): Fix memory leak.
