@@ -98,11 +98,11 @@ static struct mu_cfg_param mu_sieve_param[] = {
      N_("Clear include search path.") },
   { "library-path", mu_cfg_callback, NULL, 0, cb_library_path,
     N_("Add directories to the library search path.  Argument is a "
-       "comma-separated list of directories."),
+       "colon-separated list of directories."),
     N_("list") },
   { "include-path", mu_cfg_callback, NULL, 0, cb_include_path,
     N_("Add directories to the include search path.  Argument is a "
-       "comma-separated list of directories."),
+       "colon-separated list of directories."),
     N_("list") },
   { NULL }
 };
